updated readme images and fixed spacing on post page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,7 @@
 .fs-8 {
-  font-size: 0.6rem;
+  font-size: 0.5rem;
 }
 
-body {
-  padding-bottom: 0px;
-}
 .fa-linkedin-in {
   color: #fff;
 }
