--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,3 +49,6 @@ li {
 .fa-linkedin-in {
   color: #fff;
 }
+footer .socials {
+  font-size: 0.8rem;
+}
